BootstrapProgressPage.java: cosmetic changes